# Place_Recognition_Retrieval_System

./: README.md  check_dataset.py  manifest.csv
place-recognition-system/: .gitignore  LICENSE  benchmark_multiprocessing.py  duplicate_report.json  pyproject.toml  requirements.txt  results_faiss.json  results_final.json  results_margin_005.json  results_new.json  results_threshold_065.json  results_threshold_075.json  results_threshold_078.json  results_threshold_080.json
place-recognition-system/config/: default.yaml
place-recognition-system/embeddings_cache/: gallery_resnet50_5a66a989.npz  query_resnet50_22c0394f.npz
place-recognition-system/manifests/: gallery.jsonl  query.jsonl  stats.json
place-recognition-system/manifests_test/: gallery.jsonl  query.jsonl  stats.json
place-recognition-system/scripts/: build_index.py  build_manifest.py  check_duplicates.py  evaluate.py  extract_embeddings.py  search.py  test_image_loader.py
place-recognition-system/src/place_recognition/: __init__.py  cli.py  logging_config.py
place-recognition-system/src/place_recognition/config/: __init__.py  config.py
place-recognition-system/src/place_recognition/embeddings/: __init__.py  embedding_extractor.py
place-recognition-system/src/place_recognition/evaluation/: __init__.py  analysis.py  confidence.py  metrics.py
place-recognition-system/src/place_recognition/index/: __init__.py  search_index.py
place-recognition-system/src/place_recognition/utils/: __init__.py  seeding.py
place-recognition-system/tests/: __init__.py  conftest.py  test_image_loader.py  test_metrics.py  test_placeholder.py
(+2 files in other folders)
